--- a/RailsGirls/app/views/layouts/application.html.erb
+++ b/RailsGirls/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link <%= 'active' if current_page?(controller: 'ideas') %>" href="/ideas">Ideas</a>
+            
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%= 'active' if current_page?(controller: 'ideas') %>" href="/pages/about">About</a>
+            
           </li>
         </ul>
       </div>
