--- a/RailsGirls/app/views/ideas/_idea.html.erb
+++ b/RailsGirls/app/views/ideas/_idea.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Picture:</strong>
-    <%= idea.picture %>
-  </p>
+<%= image_tag(idea.picture_url, width: 200) if idea.picture? %>  
+ </p>
 
 </div>
